
    HADOOP-8931. Add Java version to startup message. (eli)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9072. Hadoop-Common-0.23-Build Fails to build in Jenkins 
    (Robert Parker via tgraves)

    HADOOP-8992. Enhance unit-test coverage of class HarFileSystem (Ivan A.
    Veselovsky via bobby)

    HADOOP-9038. unit-tests for AllocatorPerContext.PathIterator (Ivan A.
    Veselovsky via bobby)

Release 0.23.5 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8755. Print thread dump when tests fail due to timeout. (Andrey
    Klochkov via atm)

    HADOOP-8789. Tests setLevel(Level.OFF) should be Level.ERROR.
    (Andy Isaacson via eli)

    HADOOP-8851. Use -XX:+HeapDumpOnOutOfMemoryError JVM option in the forked
    tests. (Ivan A. Veselovsky via atm)

    HADOOP-8932. JNI-based user-group mapping modules can be too chatty on 
    lookup failures. (Kihwal Lee via suresh)

    HADOOP-8930. Cumulative code coverage calculation (Andrey Klochkov via 
    bobby)

    HADOOP-8889. Upgrade to Surefire 2.12.3 (todd)

    HADOOP-8860. Split MapReduce and YARN sections in documentation navigation.
    (tomwhite)

  OPTIMIZATIONS

    HADOOP-8819. Incorrectly & is used instead of && in some file system 
    implementations. (Brandon Li via suresh)

    HADOOP-8926. hadoop.util.PureJavaCrc32 cache hit-ratio is low for static
    data (Gopal V via bobby)

  BUG FIXES

    HADOOP-8386. hadoop script doesn't work if 'cd' prints to stdout
    (default behavior in some bash setups (esp. Ubuntu))
    (Chiristopher Berner and Andy Isaacson via harsh)

    HADOOP-8791. Fix rm command documentation to indicte it deletes
    files and not directories. (Jing Zhao via suresh)

    HADOOP-8775. MR2 distcp permits non-positive value to -bandwidth option
    which causes job never to complete. (Sandy Ryza via atm)

    HADOOP-8310. FileContext#checkPath should handle URIs with no port. (atm)
